--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           links: [
             {
               title: 'Linux文件结构',
-              link: '/Reference/LinuxFolders.md'
+              link: '/Reference/LFSHv2.0.md'
             },
             {
               title: '基本组件设置',
