Update about Templates

--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
           ]
           },
           {    
+          title: '一分钟系列',
+          links: [
+            {
+             title: '一分钟配置各种环境',
+              link: '/OneMinute/BasicComponents'
+            },
+            {
+              title: '一分钟使用GitHub',
+              link: '/OneMinute/OneMinuteGoGitHub'
+            },
+            {
+              title: '一分钟学会Markdown',
+              link: '/OneMinute/OneMinuteGoMarkdown'
+            },
+          ]
+          }, 
+          {    
           title: 'How To',
           links: [
             {
@@ -60,6 +77,23 @@
             },
           ]
           }, 
+          {
+          title: '文件模板',
+          links: [
+            {
+              title: 'README.md模板',
+              link: '/Templates/README-Template'
+            },
+            {
+              title: '基本组件设置',
+              link: '/guide/BasicComponents'
+            },
+            {
+              title: 'DDNS设置',
+              link: '/guide/DDNSSetUp.md'
+            },
+            ]
+          },
           {
           title: 'SEU-ITE 文档',
           links: [
