撰写各类模板

--- a/index.html
+++ b/index.html
@@ -85,13 +85,34 @@
               link: '/Templates/README-Template'
             },
             {
-              title: '基本组件设置',
-              link: '/guide/BasicComponents'
+              title: '启动项目前的思考',
+              link: '/Templates/BeforeProject'
             },
             {
-              title: 'DDNS设置',
-              link: '/guide/DDNSSetUp.md'
+              title: 'SWOT分析法',
+              link: '/Templates/SWOT'
             },
+            {
+              title: '软件总体设计说明书',
+              link: '/Templates/SoftWareManual'
+            },
+            {
+              title: '目标管理原则S.M.A.R.T.',
+              link: '/Templates/SMART'
+            },
+            {
+              title: '目标管理原则S.M.A.R.T.',
+              link: '/Templates/SMART'
+            },
+            {
+              title: '周报模板',
+              link: '/Templates/WeeklyReport'
+            },
+            {
+              title: '事故通报',
+              link: '/Templates/AccidentNotification'
+            },
+
             ]
           },
           {
