redesign template structure and add download link

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
               link: '/intro/ClubNavi'
             },
             {
+              title: '各类模板',
+              link: '/Templates/README'            
+            },
+            {
               title: '文档指南',
               link: '/intro/SEUITEDocManual'            
             },
+            
           ]
           },
           {    
@@ -77,44 +82,7 @@
             },
           ]
           }, 
-          {
-          title: '文件模板',
-          links: [
-            {
-              title: 'README.md模板',
-              link: '/Templates/README-Template'
-            },
-            {
-              title: '启动项目前的思考',
-              link: '/Templates/BeforeProject'
-            },
-            {
-              title: 'SWOT分析法',
-              link: '/Templates/SWOT'
-            },
-            {
-              title: '软件总体设计说明书',
-              link: '/Templates/SoftWareManual'
-            },
-            {
-              title: '目标管理原则S.M.A.R.T.',
-              link: '/Templates/SMART'
-            },
-            {
-              title: '目标管理原则S.M.A.R.T.',
-              link: '/Templates/SMART'
-            },
-            {
-              title: '周报模板',
-              link: '/Templates/WeeklyReport'
-            },
-            {
-              title: '事故通报',
-              link: '/Templates/AccidentNotification'
-            },
 
-            ]
-          },
           {
           title: 'SEU-ITE 文档',
           links: [
