change file position

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             },
             {
             title: 'GitHub',
-            link: 'https://github.com/seu-ite'
+            link: 'https://github.com/seuite'
             }
         ],
 
@@ -57,7 +57,7 @@
           links: [
             {
              title: '一分钟配置各种环境',
-              link: '/OneMinute/BasicComponents'
+              link: '/OneMinute/OneMinutreGoBasicServer'
             },
             {
               title: '一分钟使用GitHub',
